# smartsendercpp

./: .gitignore  CMakeLists.txt  main.cpp  moby.cfg  testerScript.py
.github/workflows/: cmake.yml
config/: CMakeLists.txt  Configuration.cpp  Configuration.h  SchemaType.h  SchemaValidator.h  StringBuffer.h
paper/: huffman
src/: ArrowFlight.cpp  ArrowFlight.h  CMakeLists.txt  config.cpp  config.h  constants.cpp  constants.h  doctest_main.cpp  getopt.c  main.cpp
src/managers/: ArrowFlightManager.h  BudgetManager.cpp  BudgetManager.h  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  DecompressManager.cpp  DecompressManager.h  ModelManager.cpp  ModelManager.h  ReaderManager.cpp  ReaderManager.h  TimestampManager.cpp  TimestampManager.h
src/models/: CMakeLists.txt  Gorilla.cpp  Gorilla.h  PMCMean.cpp  PMCMean.h  Swing.cpp  Swing.h  TextCompressor.cpp  TextCompressor.h  VectorBased.cpp  VectorBased.h  gorilla.cpp  gorilla.h  swing.cpp  swing.h  test.cpp  test.h  vector_based.cpp  vector_based.h
src/models/old/: PMCMean_cpp_copy  PMCMean_h_copy  gorilla_cpp_copy  gorilla_h_copy
src/utils/: CMakeLists.txt  Huffman.cpp  Huffman.h  ObserverPatternInterfaces.h  OutlierDetector.h  Timekeeper.cpp  Timekeeper.h  Timer.h  Utils.cpp  Utils.h  bitreader.cpp  bitreader.h
src/utils/arithmetic-coding/: CMakeLists.txt  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h
test/: Test.py  testerScript.py  testerScript2.py  testerScript3.py
